--- a/DER Control Test Scenarios-Prod.ipynb
+++ b/DER Control Test Scenarios-Prod.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "checking...\n"
+     ]
+    }
+   ],
+   "source": [
+    "print (\"checking...\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -36,7 +53,7 @@
        "'arn:aws:iam::440616111601:role/service-role/AmazonSageMaker-ExecutionRole-20200522T141912'"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -49,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -200,11 +217,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "N = 100\n",
+    "N = 2\n",
     "\n",
     "durationTimes = [10, 20, 30, 60, 120]\n",
     "States = [[1, 1, 1, 1], \n",
@@ -216,16 +233,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "([[0, 0, 0, 1]], [10])"
+       "([[0, 0, 0, 1]], [30])"
       ]
      },
-     "execution_count": 95,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -239,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "scrolled": false
    },
@@ -250,36 +267,19 @@
      "text": [
       "Sample Number 1 :\n",
       "State before sampling: [[1, 1, 1, 1]] , [0]\n",
-      "Waiting for data from DER ...\n",
-      "Data is ready ...\n",
-      "State after sampling: [[0, 0, 1, 1]] , [30]\n",
-      "Sending Command to DER ...\n",
-      "Waiting for data from DER ...\n",
-      "Data is ready ...\n",
-      "DERTestData/DER_testStreamTransaction-20200930T120812Z.csv\n",
-      "\n",
-      "Sample Number 2 :\n",
-      "State before sampling: [[0, 0, 1, 1]] , [30]\n",
-      "Waiting for data from DER ...\n",
-      "Data is ready ...\n",
-      "State after sampling: [[0, 0, 1, 1]] , [20]\n",
-      "Sending Command to DER ...\n",
-      "Waiting for data from DER ...\n",
-      "Data is ready ...\n",
-      "DERTestData/DER_testStreamTransaction-20200930T120843Z.csv\n",
-      "\n",
-      "Sample Number 3 :\n",
-      "State before sampling: [[0, 0, 1, 1]] , [20]\n",
-      "Waiting for data from DER ...\n",
-      "Data is ready ...\n",
-      "State after sampling: [[0, 0, 0, 1]] , [20]\n",
-      "Sending Command to DER ...\n",
-      "Waiting for data from DER ...\n",
-      "Data is ready ...\n",
-      "DERTestData/DER_testStreamTransaction-20200930T120912Z.csv\n",
-      "\n",
-      "Sample Number 4 :\n",
-      "State before sampling: [[0, 0, 0, 1]] , [20]\n"
+      "Waiting for data from DER ...\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-12-64f29db3b019>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     14\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     15\u001b[0m         \u001b[0mprint\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0;34mf'State before sampling: {state} , {duration}'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 16\u001b[0;31m         \u001b[0mrecordDER\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mrecordNetwork\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mreadStreamData\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     17\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     18\u001b[0m         \u001b[0mDERdata\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mNetworkdata\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mbinary2Dict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrecordDER\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mbinary2Dict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrecordNetwork\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-5-1915fbd02d5d>\u001b[0m in \u001b[0;36mreadStreamData\u001b[0;34m()\u001b[0m\n\u001b[1;32m     13\u001b[0m         \u001b[0mrecords\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mout\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'Records'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     14\u001b[0m         \u001b[0;31m#print (records);\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 15\u001b[0;31m         \u001b[0mtime\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msleep\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     16\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     17\u001b[0m     \u001b[0;31m#print(records)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
